--- a/tds-py-project.ipynb
+++ b/tds-py-project.ipynb
@@ -1130,7 +1130,7 @@
    "id": "9ce12043-2905-4d3c-9536-b6c011563258",
    "metadata": {},
    "source": [
-    "#### We can derive from this graph that 'length' and 'entropy' are the most important features to a password "
+    "#### We can derive from this graph that 'length', 'uppercase' and 'entropy' are the most important features to a password "
    ]
   },
   {
